--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-appdirs==1.4.5
 click==6.7
 Flask==0.12
-itsdangerous==0.24
 Jinja2==2.9.5
 MarkupSafe==1.0
 packaging==16.8
 pymessenger==0.0.7.0
 pyparsing==2.2.0
-requests==2.13.0
-six==1.10.0
+requests==2.13.0g
 Werkzeug==0.12
