--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-click==6.7
-Flask==0.12
-Jinja2==2.9.5
-MarkupSafe==1.0
+Flask==0.10.1
+Flask.SQLAlchemy==1.0
+Jinja2==2.7.3
+MarkupSafe==0.23
+SQLAlchemy==0.9.4
+gunicorn==19.0.0
+itsdangerous==0.24
 packaging==16.8
 pymessenger==0.0.7.0
 pyparsing==2.2.0
 requests==2.13.0
-Werkzeug==0.12
+Werkzeug==0.9.6
+pycopg2==2.5.3
+wsgiref==0.1.2
